--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 section{
     position: relative;
     width: 100%;
-    min-width: 100vh;
+    min-height: 100vh;
     padding: 100px;
     display: flex;
     justify-content: space-between;
